# coinbasepro-python

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  __init__.py  authenticated_client.py  book_recovery.py  contributors.txt  credentials.json  hello.md  mysql_client.py  mysql_translations.py  mysql_uploader.py  order_book.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini  websocket_client.py
CoinbaseExchange/: AuthenticatedClient.py  PublicClient.py  WebsocketClient.py  __init__.py
GDAX/: AuthenticatedClient.py  OrderBook.py  PublicClient.py  Ticker.py  WebsocketClient.py  __init__.py
cbpro/: .gitignore  __init__.py  authenticated_client.py  cancellation_entry.py  cbpro_auth.py  exceptions.py  order_book.py  order_logger.py  public_client.py  websocket_client.py
cbpro/.ipynb_checkpoints/: public_client-checkpoint.py
gdax/: __init__.py  authenticated_client.py  book_builder.py  book_recovery.py  exceptions.py  gdax_auth.py  mysql_dbi.py  mysql_uploader.py  order_book.py  order_book_l2.py  public_client.py  translations.py  upload_to_mysql.py  websocket_client.py
mongo/: WsToMongo.py
mysql/: sql_defs.py
tests/: __init__.py  api_config.json.example  test_GDAXPublicClient.py  test_authenticated_client.py  test_error_handling.py  test_order.py  test_public_client.py
tests/cassettes/: test_getProducts
tests/cassettes/public/: test_getCurrencies  test_getProduct24HrStats  test_getProduct24HrStats_product_bad  test_getProductHistoricRates  test_getProductHistoricRates_5mins  test_getProductTicker  (+12 more)
